--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -42,9 +42,9 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h2>Prossimo incontro</h2>
-        <h1>Java 8, panoramica</h1>
-        <h2>data 26 giugno 2014</h2>
-        <p class="lead">Relatore: Nicola Pedot</p>
+        <h1>TNBus, e tecnologie HTML5</h1>
+        <h2>data 22 luglio 2014</h2>
+        <p class="lead">Relatore: Davide Montesin</p>
     <!--
         <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
         <p class="lead">Relatore: Nicola Pedot</p>
