--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h2>Prossimo incontro</h2>
-        <h1>Java 8, panoramica</h1>
-        <h3>data 26 giugno 2014</h3>
-        <h3>Relatore: Nicola Pedot</h3>
+        <h1>TNBus, HTML5 & Java</h1>
+        <h3>data 22 luglio 2014</h3>
+        <h3>Relatore: Davide Montesin</h3>
         <p class="lead">In questo incontro....</p>
         <p class="lead">
-si parlerà di Java 8, facendo una panoramica dei punti positivi e negativi, aprendo temi di discussione con i presenti.
+si parlerà del progetto aperto TNBus, HTML5 e delle tecnologie java utilizzate.
         </p>
         <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
       </div>
