aggiunto mappa entrata contamination lab
aggiunto un link ad una mappa pubblica su google maps con indicata la posizione esatta dell'entrata

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -60,7 +60,7 @@
  <!--
         <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
  -->
-       <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a></p>
+       <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>
        <p class="lead">Iscrizione: ingresso libero.</p>
         <p class="lead">Costo: da tradizione i partecipanti sono invitati a
           pagare un euro, versato direttamente al relatore per offrirgli la
