aggiornato con link live streaming
aggiunto voce per evento in live streming

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -62,6 +62,7 @@
  -->
        <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>
        <p class="lead">Iscrizione: ingresso libero.</p>
+       <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p>
         <p class="lead">Costo: da tradizione i partecipanti sono invitati a
           pagare un euro, versato direttamente al relatore per offrirgli la
           pizza.</p>
