formattato codice html e chiuso div finale

--- a/index.html
+++ b/index.html
@@ -1,99 +1,100 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="img/favicon.png">
+<html lang="en">
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>JUG Trento - Home</title>
+        <title>JUG Trento - Home</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
-    <!--
-    <link href='http://fonts.googleapis.com/css?family=Jolly+Lodger' rel='stylesheet' type='text/css'>
-    -->
+        <!-- Custom styles for this template -->
+        <link href="css/justified-nav.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
+        <!--
+        <link href='http://fonts.googleapis.com/css?family=Jolly+Lodger' rel='stylesheet' type='text/css'>
+        -->
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
+        <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+    </head>
 
-  <body>
+    <body>
 
-    <div class="container">
+        <div class="container">
 
-      <div class="masthead">
-        
-    <!-- Navigation bar -->
-        <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo"></img> Java User Group Trento</h4>
-        <ul class="nav nav-justified">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li ><a href="incontri.html">Incontri</a></li>
-          <li><a href="mailinglist.html">Maling List</a></li>
-          <li><a href="utenti.html">Utenti</a></li>
-          <li><a href="manifesto.html">Manifesto</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-    <!--
-    -->
-        </ul>
-      </div>
+            <div class="masthead">
 
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h2>Prossimo incontro</h2>
-        <h1>TNBus, HTML5 & Java</h1>
-        <h3>data 22 luglio 2014</h3>
-        <h3>Relatore: Davide Montesin</h3>
-        <p class="lead">In questo incontro....</p>
-        <p class="lead">
-si parlerà del progetto aperto TNBus, HTML5 e delle tecnologie java utilizzate.
-        </p>
-        <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
-      </div>
+                <!-- Navigation bar -->
+                <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo"></img> Java User Group Trento</h4>
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li ><a href="incontri.html">Incontri</a></li>
+                    <li><a href="mailinglist.html">Maling List</a></li>
+                    <li><a href="utenti.html">Utenti</a></li>
+                    <li><a href="manifesto.html">Manifesto</a></li>
+                    <li><a href="contatti.html">Contatti</a></li>
+                    <!--
+                    -->
+                </ul>
+            </div>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-lg-4">
-          <h2>Iscrizione</h2>
-          <p>Il gruppo non ha una iscrizione formale ma lascia libera scelta di adesione alle singole attività svolte .</p>
-          <p><a class="btn btn-primary" href="iscrizione.html" role="button">Dettagli »</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Incontri</h2>
-          <p>Il Java User Group si ritrova con frequenza quasi mensile per discutere ed approdonfire temi legati a Java. </p>
-          <p><a class="btn btn-primary" href="incontri.html" role="button">Dettagli »</a></p>
-       </div>
-        <div class="col-lg-4">
-          <h2>Mailing List</h2>
-          <p>Per chi non può partecipare agli incontri il punto di contatto ufficiale del gruppo è la sua mailing list. </p>
-          <p><a class="btn btn-primary" href="mailinglist.html" role="button">Dettagli »</a></p>
-        </div>
-      </div>
+            <!-- Jumbotron -->
+            <div class="jumbotron">
+                <h2>Prossimo incontro</h2>
+                <h1>TNBus, HTML5 & Java</h1>
+                <h3>data 22 luglio 2014</h3>
+                <h3>Relatore: Davide Montesin</h3>
+                <p class="lead">In questo incontro....</p>
+                <p class="lead">
+                    si parlerà del progetto aperto TNBus, HTML5 e delle tecnologie java utilizzate.
+                </p>
+                <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
+            </div>
 
-
-      <!-- Site footer -->
-      <div class="footer">
-        <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
-      </div>
-
-    </div> <!-- /container -->
+            <!-- Example row of columns -->
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2>Iscrizione</h2>
+                    <p>Il gruppo non ha una iscrizione formale ma lascia libera scelta di adesione alle singole attività svolte .</p>
+                    <p><a class="btn btn-primary" href="iscrizione.html" role="button">Dettagli »</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Incontri</h2>
+                    <p>Il Java User Group si ritrova con frequenza quasi mensile per discutere ed approdonfire temi legati a Java. </p>
+                    <p><a class="btn btn-primary" href="incontri.html" role="button">Dettagli »</a></p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Mailing List</h2>
+                    <p>Per chi non può partecipare agli incontri il punto di contatto ufficiale del gruppo è la sua mailing list. </p>
+                    <p><a class="btn btn-primary" href="mailinglist.html" role="button">Dettagli »</a></p>
+                </div>
+            </div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-  
+            <!-- Site footer -->
+            <div class="footer">
+                <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
+            </div>
 
-</body></html>
+        </div> <!-- /container -->
+
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+
+    </body>
+</html>
