--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -1,85 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="img/favicon.png">
-    <title>JUG Trento - Incontri</title>
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Snippet" rel="stylesheet"
-      type="text/css">
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-    <!-- timeline -->
-    <link rel="stylesheet" type="text/css" href="timeline/css/component.css">
-    <script src="timeline/js/modernizr.custom.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <!-- Navigation bar -->
-      <div class="masthead">
-        <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo"> Java
-          User Group Trento</h4>
-        <ul class="nav nav-justified">
-          <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="incontri.html">Incontri</a></li>
-          <li><a href="mailinglist.html">Maling List</a></li>
-          <li><a href="utenti.html">Utenti</a></li>
-          <li><a href="manifesto.html">Manifesto</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-        </ul>
-      </div>
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h2>Prossimo incontro</h2>
-        <h1>TNBus, e tecnologie HTML5</h1>
-        <h2>data 22 luglio 2014</h2>
-        <p class="lead">Relatore: Davide Montesin</p>
-    <!--
-        <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
-        <p class="lead">Relatore: Nicola Pedot</p>
-        <p class="lead">In questo incontro presenteremo le API di programmazione
-          dell'ultima versione ufficiale delle specifiche Java Enterprise e
-          vedremo insieme come costruire degli esempi JEE con Eclipse Kepler e
-          Apache TomEE.</p>
-        <p class="lead">Luogo: Aula Garda, Facoltà Scienze Matematiche Fisiche
-          Naturali, Povo, Via Sommarive 15, Trento.</p>
-    -->
-        <p class="lead">Orario: 18.30</p>
-        <p class="lead">Lingua: italiana</p>
- <!--
-        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
- -->
-       <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>
-       <p class="lead">Iscrizione: ingresso libero.</p>
-       <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p>
-        <p class="lead">Costo: da tradizione i partecipanti sono invitati a
-          pagare un euro, versato direttamente al relatore per offrirgli la
-          pizza.</p>
-        <p class="lead">Post: a seguire per chi desidera approfondire o
-          chiaccherare il gruppo si ferma in una pizzeria vicina.</p>
-    <!--
-        <p><a class="btn btn-lg btn-success" href="http://www.jugevents.org/jugevents/event/53242"
-            role="button">Iscriviti</a></p>
--->
-      </div>
-      <!-- Site footer -->
-      <div class="footer">
-        <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio
-          registrato da Oracle Corporation.</p>
-      </div>
-      <!-- Bootstrap core JavaScript
-    ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster --> </div>
-  </body>
+    <head>
+        <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="img/favicon.png">
+        <title>JUG Trento - Incontri</title>
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="css/justified-nav.css" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Snippet" rel="stylesheet"
+              type="text/css">
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
+        <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+        <!-- timeline -->
+        <link rel="stylesheet" type="text/css" href="timeline/css/component.css">
+        <script src="timeline/js/modernizr.custom.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <!-- Navigation bar -->
+            <div class="masthead">
+                <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo"> Java
+                    User Group Trento</h4>
+                <ul class="nav nav-justified">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="incontri.html">Incontri</a></li>
+                    <li><a href="mailinglist.html">Maling List</a></li>
+                    <li><a href="utenti.html">Utenti</a></li>
+                    <li><a href="manifesto.html">Manifesto</a></li>
+                    <li><a href="contatti.html">Contatti</a></li>
+                </ul>
+            </div>
+            <!-- Jumbotron -->
+            <div class="jumbotron">
+                <h2>Prossimo incontro</h2>
+                <h1>TNBus, e tecnologie HTML5</h1>
+                <h2>data 22 luglio 2014</h2>
+                <p class="lead">Relatore: Davide Montesin</p>
+                <!--
+                    <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
+                    <p class="lead">Relatore: Nicola Pedot</p>
+                    <p class="lead">In questo incontro presenteremo le API di programmazione
+                      dell'ultima versione ufficiale delle specifiche Java Enterprise e
+                      vedremo insieme come costruire degli esempi JEE con Eclipse Kepler e
+                      Apache TomEE.</p>
+                    <p class="lead">Luogo: Aula Garda, Facoltà Scienze Matematiche Fisiche
+                      Naturali, Povo, Via Sommarive 15, Trento.</p>
+                -->
+                <p class="lead">Orario: 18.30</p>
+                <p class="lead">Lingua: italiana</p>
+                <!--
+                       <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
+                -->
+                <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>
+                <p class="lead">Iscrizione: ingresso libero.</p>
+                <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p>
+                <p class="lead">Costo: da tradizione i partecipanti sono invitati a
+                    pagare un euro, versato direttamente al relatore per offrirgli la
+                    pizza.</p>
+                <p class="lead">Post: a seguire per chi desidera approfondire o
+                    chiaccherare il gruppo si ferma in una pizzeria vicina.</p>
+                <!--
+                    <p><a class="btn btn-lg btn-success" href="http://www.jugevents.org/jugevents/event/53242"
+                        role="button">Iscriviti</a></p>
+                -->
+            </div>
+            <!-- Site footer -->
+            <div class="footer">
+                <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio
+                    registrato da Oracle Corporation.</p>
+            </div>
+            <!-- Bootstrap core JavaScript
+            ================================================== -->
+            <!-- Placed at the end of the document so the pages load faster --> 
+        </div>
+    </body>
 </html>
