--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -42,9 +42,9 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>TNBus, e tecnologie HTML5</h1>
-                <h2>data 22 luglio 2014</h2>
-                <p class="lead">Relatore: Davide Montesin</p>
+                <h1>Java8 Streams</h1>
+                <h2>data 21 agosto 2014</h2>
+                <p class="lead">Relatore: Simone Bordet</p>
                 <!--
                     <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
                     <p class="lead">Relatore: Nicola Pedot</p>
@@ -55,14 +55,14 @@
                     <p class="lead">Luogo: Aula Garda, Facoltà Scienze Matematiche Fisiche
                       Naturali, Povo, Via Sommarive 15, Trento.</p>
                 -->
-                <p class="lead">Orario: 18.30</p>
+                <p class="lead">Orario: dalle 18.00 alle 21.00</p>
                 <p class="lead">Lingua: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
                 -->
                 <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>
                 <p class="lead">Iscrizione: ingresso libero.</p>
-                <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p>
+                <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
                 <p class="lead">Costo: da tradizione i partecipanti sono invitati a
                     pagare un euro, versato direttamente al relatore per offrirgli la
                     pizza.</p>
