aggiornato prossimo incontro e descrizione su index

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>TNBus, HTML5 & Java</h1>
-                <h3>data 22 luglio 2014</h3>
-                <h3>Relatore: Davide Montesin</h3>
+                <h1>Java8 Streams</h1>
+                <h3>data: 21 agosto 2014</h3>
+                <h3>Relatore: Simone Bordet</h3>
                 <p class="lead">In questo incontro....</p>
                 <p class="lead">
-                    si parlerà del progetto aperto TNBus, HTML5 e delle tecnologie java utilizzate.
+                    si parlerà delle nuove API e si approndirà attraverso degli esercizi insieme
                 </p>
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
