--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,7 +43,7 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h1>Java8 Streams</h1>
-                <h2>data 21 agosto 2014</h2>
+                <h2>data: 21 agosto 2014</h2>
                 <p class="lead">Relatore: Simone Bordet</p>
                 <!--
                     <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
