corretto descrizione incontro

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3>Relatore: Simone Bordet</h3>
                 <p class="lead">In questo incontro....</p>
                 <p class="lead">
-                    si parlerà delle nuove API e si approndirà attraverso degli esercizi insieme
+                    si parlerà delle nuove API di Java8 e si approfondirà l'argomento attraverso delle esercitazioni pratiche
                 </p>
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
