--- a/incontri.html
+++ b/incontri.html
@@ -81,7 +81,7 @@
                                 <h3>relatore Davide Montesin</h3>
                                 <p><i>Contamination lab, TN</i></p>
                                 <p>Si è parlato del progetto aperto TNBus, HTML5 e delle tecnologie java utilizzate.</p>
-                                <p>Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento e' stato trasmesso in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p>
+                                <p>Live Streaming: <a href="https://www.youtube.com/watch?v=feVlDDd0uvY" target="_blank">per la prima volta l'evento e' stato trasmesso in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p>
                             </div>
                         </li>                        
                         <li>
