formattazione codice html e corretto chiusura div container

--- a/iscrizione.html
+++ b/iscrizione.html
@@ -1,73 +1,74 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="img/favicon.png">
+<html lang="en">
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>JUG Trento - Iscrizione</title>
+        <title>JUG Trento - Iscrizione</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
+        <!-- Custom styles for this template -->
+        <link href="css/justified-nav.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
+        <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
 
-  </head>
+    </head>
 
-  <body>
+    <body>
 
-    <div class="container">
+        <div class="container">
 
-    <!-- Navigation bar -->
-      <div class="masthead">
-        <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo"></img> Java User Group Trento</h4>
-        <ul class="nav nav-justified">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="incontri.html">Incontri</a></li>
-          <li><a href="mailinglist.html">Maling List</a></li>
-          <li><a href="utenti.html">Utenti</a></li>
-          <li><a href="manifesto.html">Manifesto</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-        </ul>
-      </div>
+            <!-- Navigation bar -->
+            <div class="masthead">
+                <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo" /> Java User Group Trento</h4>
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="incontri.html">Incontri</a></li>
+                    <li><a href="mailinglist.html">Maling List</a></li>
+                    <li><a href="utenti.html">Utenti</a></li>
+                    <li><a href="manifesto.html">Manifesto</a></li>
+                    <li><a href="contatti.html">Contatti</a></li>
+                </ul>
+            </div>
 
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h1>Iscrizione</h1>
-        <p>Il JUG è un gruppo di utenti Java e ciscuno è libero di scegliere come partecipare e di impegnarsi nel rispetto del <a href="manifesto.html">manifesto</a>. Non esiste un'iscrizione formale. Si rimane in contatto via email e ci si impegna in organizzare <a href="incontri.html">incontri</a> concordando per argomento e modalità con un <a href="contatti.html">coordinatore</a> .</p>
-        <p>Per prima cosa è utile quindi iscriversi alla Mailing List</p>
-        <p><a class="btn btn-lg btn-success" href="mailinglist.html" role="button">Iscriviti alla Mailing List</a></p>
-        <p>E' gradito poi la vostra dimostrazione di supporto chiedendo ad un coordinatore di aggiungervi in lista pubblica Utenti</p>
-        <p><a class="btn btn-lg btn-success" href="utenti.html" role="button">Aggiungiti alla lista Utenti</a></p>
+            <!-- Jumbotron -->
+            <div class="jumbotron">
+                <h1>Iscrizione</h1>
+                <p>Il JUG è un gruppo di utenti Java e ciscuno è libero di scegliere come partecipare e di impegnarsi nel rispetto del <a href="manifesto.html">manifesto</a>. Non esiste un'iscrizione formale. Si rimane in contatto via email e ci si impegna in organizzare <a href="incontri.html">incontri</a> concordando per argomento e modalità con un <a href="contatti.html">coordinatore</a> .</p>
+                <p>Per prima cosa è utile quindi iscriversi alla Mailing List</p>
+                <p><a class="btn btn-lg btn-success" href="mailinglist.html" role="button">Iscriviti alla Mailing List</a></p>
+                <p>E' gradito poi la vostra dimostrazione di supporto chiedendo ad un coordinatore di aggiungervi in lista pubblica Utenti</p>
+                <p><a class="btn btn-lg btn-success" href="utenti.html" role="button">Aggiungiti alla lista Utenti</a></p>
 
-      </div>
-
-
-
-      <!-- Site footer -->
-      <div class="footer">
-        <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
-      </div>
+            </div>
 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-  
+            <!-- Site footer -->
+            <div class="footer">
+                <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
+            </div>
 
-</body></html>
+
+
+            <!-- Bootstrap core JavaScript
+            ================================================== -->
+            <!-- Placed at the end of the document so the pages load faster -->
+
+        </div>
+    </body></html>
