--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>Java8 Streams</h1>
-                <h3>data: 21 agosto 2014</h3>
-                <h3>Relatore: Simone Bordet</h3>
+                <h1>Mule ESB e l'integrazione con Activiti BPM</h1>
+                <h3>data: 24 Settembre 2014</h3>
+                <h3>Relatore: Jovan Stevovic</h3>
+                <!--                
                 <p class="lead">In questo incontro....</p>
                 <p class="lead">
                     si parlerà delle nuove API di Java8 e si approfondirà l'argomento attraverso delle esercitazioni pratiche
                 </p>
+                -->
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
 
