--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -60,8 +60,8 @@
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
                 -->
-<!--                <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>-->
-                <p class="lead">Luogo: <a href="http://www.semanticvalley.it/">Semantic Valley</a> (Piazza Manci 17 Povo, edificio della banca, ingresso sul retro.)</p>
+                <!--                <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>-->
+                <p class="lead">Luogo: <a href="http://www.semanticvalley.it/">Semantic Valley</a> (Piazza Manci 17 Povo, edificio della banca, ingresso sul retro)</p>
                 <p class="lead">Iscrizione: ingresso libero.</p>
                 <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
                 <p class="lead">Costo: da tradizione i partecipanti sono invitati a
@@ -70,9 +70,9 @@
                 <p class="lead">Post: a seguire per chi desidera approfondire o
                     chiaccherare il gruppo si ferma in una pizzeria vicina.</p>
 
-                    <p><a class="btn btn-lg btn-success" href="http://doodle.com/f4adt3u6dggym3de"
-                        role="button">Iscriviti</a></p>
-                
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/f4adt3u6dggym3de"
+                      role="button">Iscriviti</a></p>
+
             </div>
             <!-- Site footer -->
             <div class="footer">
