--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -70,8 +70,7 @@
                 <p class="lead">Post: a seguire per chi desidera approfondire o
                     chiaccherare il gruppo si ferma in una pizzeria vicina.</p>
 
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/f4adt3u6dggym3de"
-                      role="button">Iscriviti</a></p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/f4adt3u6dggym3de" role="button">Iscriviti</a></p>
 
             </div>
             <!-- Site footer -->
