aggiunto link mappe ingressi

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -61,7 +61,7 @@
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
                 -->
                 <!--                <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>-->
-                <p class="lead">Luogo: <a href="http://www.semanticvalley.it/">Semantic Valley</a> (Piazza Manci 17 Povo, edificio della banca, ingresso sul retro)</p>
+                <p class="lead">Luogo: <a href="http://www.semanticvalley.it/" target="_blank">Semantic Valley</a> (Piazza Manci 17 Povo, <a href="https://www.google.it/maps/place/46%C2%B003%2756.8%22N+11%C2%B009%2717.5%22E/@46.065766,11.154871,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">edificio della banca</a>, <a href="https://www.google.it/maps/place/46%C2%B003%2756.7%22N+11%C2%B009%2719.0%22E/@46.065747,11.155268,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">ingresso sul retro</a>)</p>
                 <p class="lead">Iscrizione: ingresso libero.</p>
                 <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
                 <p class="lead">Costo: da tradizione i partecipanti sono invitati a
