prossimo incontro e Riccardo Tasso tra gli utenti

--- a/utenti.html
+++ b/utenti.html
@@ -294,6 +294,17 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
+                    <h2 class="featurette-heading">Tasso Riccardo</h2>  <span class="text-muted">utente onorario</span>
+                    <p class="lead"></p>
+                </div>
+                <div class="col-md-5">
+                    <img class="featurette-image img-responsive" src="img/users/user.gif" alt="Generic placeholder image">
+                </div>
+            </div>
+
+
+            <div class="row featurette">
+                <div class="col-md-7">
                     <h2 class="featurette-heading">Tomasi Cristiano</h2>  <span class="text-muted">utente onorario</span>
                     <p class="lead"></p>
                 </div>
