--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -42,9 +42,9 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>Mule ESB e l'integrazione con Activiti BPM</h1>
-                <h2>data: 24 Settembre 2014</h2>
-                <p class="lead">Relatore: Jovan Stevovic</p>
+                <h1>ZoeFX Web Framework</h1>
+                <h2>data: (sondaggio in corso)</h2>
+                <p class="lead">Relatore: Tiziano Lattisi</p>
                 <!--
                     <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
                     <p class="lead">Relatore: Nicola Pedot</p>
@@ -55,7 +55,7 @@
                     <p class="lead">Luogo: Aula Garda, Facoltà Scienze Matematiche Fisiche
                       Naturali, Povo, Via Sommarive 15, Trento.</p>
                 -->
-                <p class="lead">Orario: dalle 18.00 alle 20.30</p>
+                <p class="lead">Orario: (sondaggio in corso)</p>
                 <p class="lead">Lingua: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
@@ -70,7 +70,7 @@
                 <p class="lead">Post: a seguire per chi desidera approfondire o
                     chiaccherare il gruppo si ferma in una pizzeria vicina.</p>
 
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/f4adt3u6dggym3de" role="button">Iscriviti</a></p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/kiq7kr73y7p3swyf" role="button">Iscriviti</a></p>
 
             </div>
             <!-- Site footer -->
