--- a/index.html
+++ b/index.html
@@ -54,15 +54,11 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>Mule ESB e l'integrazione con Activiti BPM</h1>
-                <h3>data: 24 Settembre 2014</h3>
-                <h3>Relatore: Jovan Stevovic</h3>
-                <!--                
-                <p class="lead">In questo incontro....</p>
-                <p class="lead">
-                    si parlerà delle nuove API di Java8 e si approfondirà l'argomento attraverso delle esercitazioni pratiche
-                </p>
-                -->
+                <h1>ZoeFX Web Framework</h1>
+                <h3>data: (sondaggio in corso)</h3>
+                <h3>Relatore: Tiziano Lattisi</h3>    
+                <p class="lead"><a href="http://www.lattisi.com/blog/zoefx/">ZFX</a> è un framework che implementa il pattern MVC fornendo un modello e un controller ispettivi, dando allo sviluppatore la possibilità di concentrarsi solo sulla vista e sulla struttura del dato.</p>   
+                <p class="lead">Nello specifico lo sviluppatore è chiamato unicamente a definire le classi entità che rappresentano lo stato dell’applicazione e disegnare la UI tramite il designer di JavaFX.</p>
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
 
