aggiornato prossimo incontro

--- a/contatti.html
+++ b/contatti.html
@@ -75,6 +75,16 @@
                 </div>
             </div>
 
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h2 class="featurette-heading">Tasso Riccardo</h2> <span class="text-muted"> coordinatore</span>
+                    <p class="lead">riccardo.tasso [at] gmail.com</p>
+                </div>
+                <div class="col-md-5">
+                    <img class="featurette-image img-responsive" src="img/users/user.gif" alt="Generic placeholder Image">
+                </div>
+            </div>
+
 
             <!-- Site footer -->
             <div class="footer">
