--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,7 +43,7 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h1>ZoeFX Web Framework</h1>
-                <h2>data: (sondaggio in corso)</h2>
+                <h2>data: 29/10/2014</h2>
                 <p class="lead">Relatore: Tiziano Lattisi</p>
                 <!--
                     <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
@@ -55,7 +55,7 @@
                     <p class="lead">Luogo: Aula Garda, Facoltà Scienze Matematiche Fisiche
                       Naturali, Povo, Via Sommarive 15, Trento.</p>
                 -->
-                <p class="lead">Orario: (sondaggio in corso)</p>
+                <p class="lead">Orario: 19:30 - 21:30</p>
                 <p class="lead">Lingua: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
